--- a/foundry.toml
+++ b/foundry.toml
@@ -7,4 +7,8 @@ remappings = [
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
     "@openzeppelin/solidity=lib/openzeppelin-solidity/contracts",
 ]
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+[invariant]
+runs = 128
+depth = 128
+fail_on_revert = false
